# AI-Robot-Software-Course

./: .gitignore  README.md  best_full_integer_quant.tflite  debug_env.launch.py  escort_full_system.launch.py  package.xml  setup.cfg  setup.py  코드실행방법
1차프로젝트/A-EYE Parking/: README.md
1차프로젝트/A-EYE Parking/main 1/: ocr_validation_module.py
2차프로젝트/: README.md
2차프로젝트/OpenCV/: escort_full_system.launch.py  escort_vision_node.py
2차프로젝트/control_robot/launch/: spawn_robots.launch.py
2차프로젝트/control_robot/team_project/: escort_vision_node.py  g1.py  (+1 more)
2차프로젝트/yolo_model/: last_testcode.py
A-EYE Parking/finalproject/: finalproject.py
OpenCV/: escort_turtlebot_gui.py  escort_vision_node.py
OpenCV/NoUse/: gesture_turtle.py
OpenCV_2/: escort_turtlebot_gui.py  escort_vision_node.py
c/: README.md
c++/grammer/: README.md
control_robot/: package.xml  setup.cfg  setup.py
control_robot/team_project/: follower_node.py  gesture_turtle.py  leader_node.py
controllserver/docs/: package_differences.md
controllserver/src/escort_turtlebot_pkg/: README.md  package.xml  setup.py
controllserver/src/escort_turtlebot_pkg/docs/: architecture.md  parameters_and_launch.md
controllserver/src/escort_turtlebot_pkg/escort_turtlebot_pkg/: escort_turtlebot_gui.py  escort_vision_node.py  follower_detector_node.py  follower_node.py  leader_initial_move_node.py  leader_node.py  lidar_odom_bridge_node.py
controllserver/src/escort_turtlebot_pkg/launch/: escort_core.launch.py  escort_follower.launch.py  escort_full_system.launch.py  escort_real.launch.py  escort_sim.launch.py  escort_turtle.launch.py
controllserver/src/escort_turtlebot_pkg/param/: escort_controll_server1.yaml  slam_toolbox_params.yaml
docs/: api_topics.md
ros2_personal_project/: main.py  main_node.py  setup.py
ros2_personal_project/ui/: main_window_ui.py
team_project/: follower_node.py  gesture_turtle.py  leader_node.py
ui/: main_window.ui  teleop_panel.ui  teleop_panel_ui.py
yolo_model/: README.md
(+43 files in other folders)
