<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>escort_turtlebot_pkg</name>
  <version>0.0.0</version>
  <description>Launch and bridge utilities for TurtleBot escort follower experiments.</description>
  <maintainer email="cherrybear03@naver.com">penguin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>escort_follower</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
